ctyped changelog
================


v0.2.0
------
+ Added 'int_bits' shortcut option.
+ Added 'int_sign' shortcut option.
+ Added CObject convenience.
+ Added support for Python strings as wide chars.
* Result is now casted with 'errcheck'.


v0.1.0
------
+ Basic functionality.